[package]
name = "co2-sensor"
version = "0.1.0"
authors = ["tobias"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0.71"
embedded-hal = "1.0.0-rc.1"
toml-cfg = "=0.1.3"
esp-idf-hal = { version = "0.42.5", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
embedded-svc = { version = "0.26.4", default-features = false }
embedded-io = { version = "0.6.1"}

[build-dependencies]
embuild = "0.31.3"
anyhow = "1.0.71"
toml-cfg = "=0.1.3"

